--- a/settings.yaml
+++ b/settings.yaml
@@ -3,7 +3,7 @@ mysql:
   port: 3306
   db: gvb_db
   user: root
-  password: root
+  password: 123456
   log_level: dev
 logger:
   level: info
@@ -14,4 +14,4 @@ logger:
 system:
   host: "0.0.0.0"
   port: 8080
-  env: dev
+  env: release
